#00005778: Partly reverted #00005730 (301 redirects)

--- a/OpenWGA/plugins/admin/design/scripts/css/wgadmin.css
+++ b/OpenWGA/plugins/admin/design/scripts/css/wgadmin.css
@@ -60,10 +60,11 @@ button{
 .List.disabled td{
 	background: white;
 }
-.List.disabled td, .List.disabled td *{
+.List.disabled td, .List.disabled td *:not(button){
 	font-style: italic;
 	color: silver;
 }
+
 .List.system td{
 	background: #efefef;
 }
