#00005791: CM-Neo Sidepanel DOM event handler not initialised after return from admin view

--- a/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/main.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/main.tml
@@ -65,6 +65,7 @@
 </div>
 
 <script>
-	require(["action-panel"]);
+	require(["action-panel"], function(Sidebar){
+		Sidebar.initDomEvents();
+	});
 </script>
-
