--- a/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-attachments.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-attachments.tml
@@ -78,7 +78,7 @@
 					<i class="far fa-file-alt"></i>
 				</a>
 				
-				<a class="pull-right disabled" href="#" data-action="delete" title="Ausgewählte Datei(en) löschen">
+				<a class="pull-right disabled" href="#" data-action="delete-attachments" title="Ausgewählte Datei(en) löschen">
 					<span class="glyphicon glyphicon-trash"></span>
 				</a>					
 			</div>
