--- a/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-attachments.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-attachments.tml
@@ -9,7 +9,7 @@
 				<div class="filetype">
 					{{#files}}
 						<div class="thumb{{#isPrimary}} primary{{/isPrimary}}" draggable="true" 
-								title="{{filetitle}}"
+								title="{{filename}}"
 								data-type="{{type}}"
 								data-key="{{key}}"
 								data-dbkey="{{dbkey}}"
