#00005799: content module "image": Settings does not allow lightbox downloads true/false

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/plugin-cm-neo/click.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/plugin-cm-neo/click.tml
@@ -45,7 +45,7 @@
 		</div>
 	</tml:case>
 	<tml:case value="zoom">
-		<tml:case context="{_context}" iscontextvalid="true">
+		<tml:case context="{$option_context}" iscontextvalid="true">
 			<label>Lightbox-Image:</label>
 				<div style="margin:10px">
 					<tml:include ref="util:select-image" o_fieldname="lightbox_image" o_empty-text="Original"/>
