--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/overlay/config.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/overlay/config.tml
@@ -31,6 +31,7 @@
 	type:			'container',				
 	tml:			'modules:overlay:render',
 	settingstml:	'modules:overlay:setting',
+	outlinetml:		'modules:overlay:outline',
 	includes: {
 		css: 	'modules:overlay:css',
 		jquery_plugins: ["modal"]
