#00005813: CM-Neo: improved RTF HTML-Edit

--- a/OpenWGA/plugins/cm-neo/design/scripts/css/dialog.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/dialog.scss
@@ -240,7 +240,7 @@
 	}
 }
 
-#dialog-page-settings_render, #dialog-settings_content, #dialog-settings_user-defined, #dialog-create-page_child, #dialog-create-page_root {
+#dialog-page-settings_render, #dialog-settings_content, #dialog-settings_user-defined, #dialog-create-page_child, #dialog-create-page_root, #dialog-edit-html {
 	width: 900px;
 	margin-left: -450px;
 }
@@ -349,7 +349,7 @@
 	}
 }
 
-#dialog-edit-html, #dialog-edit-rtf-link, #dialog-edit-rtf-image {
+#dialog-edit-rtf-link, #dialog-edit-rtf-image {
 	width: 800px;
 	margin-left: -400px;
 	
